adequação do estilos e da estrutura

--- a/index.html
+++ b/index.html
@@ -9,26 +9,33 @@
     <div class="layout">
       <div class="layout-lista">
         <div class="lista-cartao">
-          <label for="" class="cartao-texto"
+          <label class="cartao-texto"
             >Estruturando o projeto para os alunos</label
           >
           <div class="cartao-data">14 de janeiro</div>
         </div>
         <div class="lista-cartao">
-          <label for="" class="cartao-texto">Eu estou com sono</label>
+          <label class="cartao-texto">Eu estou com sono</label>
           <div class="cartao-data">12 de setembto</div>
         </div>
       </div>
     </div>
-    <div class="layout">
+
+    <div class="layout-lista">
+      <div class="lista-cartao">
+        <label class="cartao-texto">Tome café</label>
+        <div class="cartao-data">23 de fevereiro</div>
+      </div>
+
       <div class="layout-lista">
         <div class="lista-cartao">
-          <label for="" class="cartao-texto"
-            >Estruturando o projeto para os alunos</label
-          >
-          <div class="cartao-data">14 de janeiro</div>
+          <label class="cartao-texto">Atividade de historia</label>
+          <div class="cartao-data">14 de Maio</div>
+          <div class="lista-cartao">
+            <label class="cartao-texto">Prova de Geografia</label>
+            <div class="cartao-data">10 de Abril</div>
         </div>
-      </div>
+
     </div>
   </body>
 </html>
